# pydobble

./: .gitignore  LICENSE  README.md  pyproject.toml
dobble/: config.py  main.py
dobble/data/: emojis.txt
dobble/game/: card.py  game.py  player.py
dobble/ui/: components.py  display.py  game_ui.py  input.py
dobble/utils/: emoji_loader.py
tests/: test_card.py  test_game.py  test_main.py
