[project]
name = "pydobble"
version = "1.1.0"
description = "A Dobble/Spot It! card game implementation"
authors = [
    {name = "Tech4Bueno", email = "164949278+tech4bueno@users.noreply.github.com"},
]
dependencies = [
    "rich>=13.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0"
]

[project.scripts]
dobble = "dobble.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dobble"]

[tool.hatch.build]
include = [
    "dobble/**/*.py",
    "dobble/data/*.txt"
]

[tool.setuptools.package-data]
pydobble = ["data/*.txt"]

[tool.pytest.ini_options]
addopts = "--cov=dobble --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["dobble"]
omit = [
    "*/ui/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]

[project.urls]
Homepage = "https://github.com/tech4bueno/pydobble"
Repository = "https://github.com/tech4bueno/pydobble.git"

